--- a/index.html
+++ b/index.html
@@ -5,30 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brika Потолки</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Brika Потолки</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="portfolio/portfolio.html">Портфолио</a></li>
-        <li><a href="shop/products.html">Магазин</a></li>
-        <li><a href="about.html">Контакты</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>Brika Потолки</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="portfolio/portfolio.html">Портфолио</a></li>
+          <li><a href="shop/products.html">Магазин</a></li>
+          <li><a href="about.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <section>
-      <h2>Добро пожаловать!</h2>
-      <p>Мы делаем стильные и современные натяжные потолки под ключ.</p>
-      <p>Посмотри наши работы и освещение, которое мы устанавливаем.</p>
+  <main class="container">
+    <section class="intro">
+      <h2>Натяжные потолки под ключ</h2>
+      <p>Современные технологии, качественная установка, световые решения и индивидуальный подход.</p>
+      <a href="portfolio/portfolio.html" class="btn">Смотреть работы</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Brika. Все права защищены.</p>
+    <div class="container">
+      <p>&copy; 2025 Brika — стильные натяжные потолки. Все права защищены.</p>
+    </div>
   </footer>
 </body>
 </html>
