--- a/index.html
+++ b/index.html
@@ -2,38 +2,31 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Brika Потолки</title>
   <link rel="stylesheet" href="css/styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Brika Потолки</h1>
+      <div class="logo">Brika</div>
       <nav>
         <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="portfolio/portfolio.html">Портфолио</a></li>
-          <li><a href="shop/products.html">Магазин</a></li>
-          <li><a href="about.html">Контакты</a></li>
+          <li><a href="#" class="active">Главная</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
-  <main class="container">
-    <section class="intro">
-      <h2>Натяжные потолки под ключ</h2>
-      <p>Современные технологии, качественная установка, световые решения и индивидуальный подход.</p>
-      <a href="portfolio/portfolio.html" class="btn">Смотреть работы</a>
-    </section>
+  <main>
+    <h1>Стильные натяжные потолки<br>для вашего дома</h1>
+    <p>Качественная установка, современные световые решения и индивидуальный дизайн — чтобы каждый потолок был уникальным.</p>
+    <a href="#" class="btn">Смотреть работы</a>
   </main>
-
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Brika — стильные натяжные потолки. Все права защищены.</p>
-    </div>
+    &copy; 2025 Brika — Все права защищены
   </footer>
 </body>
 </html>
