--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> Потолки</title>
+  <title> 12312331231123 </title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
