--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <nav>
         <ul>
           <li><a href="#" class="active">Главная</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Порт</a></li>
+          <li><a href="#">Магазинчик</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
