--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     <p>Качественная установка, современные световые решения и индивидуальный дизайн — чтобы каждый потолок был уникальным.</p>
     <a href="#" class="btn">Смотреть работы</a>
   </main>
+  <section class="about">
+  <h2>О компании Brika Потолки</h2>
+  <p>Мы занимаемся установкой натяжных потолков с 2015 года. Качество, современные технологии и индивидуальный подход — наши главные приоритеты.</p>
+  <p>Наша команда профессионалов гарантирует быстрый и аккуратный монтаж, а также консультации по выбору освещения и материалов.</p>
+</section>
+
   <footer>
     &copy; 2025 Brika — Все права защищены
   </footer>
