--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,10 +1,43 @@
-<!-- portfolio/portfolio.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Портфолио — Brika Потолки</title>
   <link rel="stylesheet" href="../css/styles.css" />
+  <style>
+    main h2 {
+      font-size: 2.5rem;
+      color: #007acc;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      transition: transform 0.3s ease;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.03);
+    }
+
+    .portfolio-text {
+      text-align: center;
+      margin-bottom: 40px;
+      font-size: 1.1rem;
+      color: #444;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -23,7 +56,15 @@
 
   <main class="container">
     <h2>Портфолио выполненных работ</h2>
-    <p>Здесь будут фотографии и описания реальных объектов, выполненных нашей командой.</p>
+    <p class="portfolio-text">Ниже представлены реальные объекты, которые мы сделали — от простых до сложных решений.</p>
+    
+    <div class="gallery">
+      <img src="https://via.placeholder.com/600x400?text=Работа+1" alt="Работа 1" />
+      <img src="Photos/1.jpg"  alt="Работа 2" />
+      <img src="https://via.placeholder.com/600x400?text=Работа+3" alt="Работа 3" />
+      <img src="https://via.placeholder.com/600x400?text=Работа+4" alt="Работа 4" />
+      <img src="https://via.placeholder.com/600x400?text=Работа+5" alt="Работа 5" />
+    </div>
   </main>
 
   <footer>
