--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <main>
     <h1>Стильные натяжные потолки<br>для вашего дома</h1>
     <p>Качественная установка, современные световые решения и индивидуальный дизайн — чтобы каждый потолок был уникальным.</p>
-    <a href="#" class="btn">Смотреть работы</a>
+    <a href="portfolio/portfolio.html" class="btn">Смотреть работы</a>
+ 
   </main>
   <section class="about">
   <h2>О компании Brika Потолки</h2>
