--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="#" class="active">Главная</a></li>
-          <li><a href="portfolio/portfolio.html" class="active">Портфолио</a></li>
+          <li><a href="portfolio/portfolio.html">Портфолио</a></li>
           <li><a href="#">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
