--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <title>Портфолио — Brika Потолки</title>
   <link rel="stylesheet" href="../css/styles.css" />
-  <!-- Lightbox CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -27,9 +25,11 @@
     <p>Здесь будут фотографии и описания реальных объектов, выполненных нашей командой.</p>
 
     <div class="gallery">
-      <a href="Photos/1.jpg" data-lightbox="portfolio" data-title="Работа 1">
-        <img src="Photos/1.jpg" alt="Работа 1" />
-      </a>
+      <div class="photo"><img src="Photos/1.jpg" alt="Работа 1" /></div>
+      <div class="photo"><img src="Photos/2.jpg" alt="Работа 2" /></div>
+      <div class="photo"><img src="Photos/3.jpg" alt="Работа 3" /></div>
+      <div class="photo"><img src="Photos/4.jpg" alt="Работа 4" /></div>
+
     </div>
   </main>
 
@@ -38,8 +38,5 @@
       <p>&copy; 2025 Brika — стильные натяжные потолки. Все права защищены.</p>
     </div>
   </footer>
-
-  <!-- Lightbox JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
