--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -25,12 +25,20 @@
     <p>Здесь будут фотографии и описания реальных объектов, выполненных нашей командой.</p>
 
     <div class="gallery">
-      <div class="photo"><img src="Photos/1.jpg" alt="Работа 1" /></div>
-      <div class="photo"><img src="Photos/2.jpg" alt="Работа 2" /></div>
-      <div class="photo"><img src="Photos/3.jpg" alt="Работа 3" /></div>
-      <div class="photo"><img src="Photos/4.jpg" alt="Работа 4" /></div>
+  <img src="Photos/1.jpg" alt="Работа 1" class="gallery-item" />
+  <img src="Photos/2.jpg" alt="Работа 2" class="gallery-item" />
+  <img src="Photos/3.jpg" alt="Работа 3" class="gallery-item" />
+  <!-- остальные фото -->
+</div>
 
-    </div>
+<!-- Лайтбокс -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-img" src="" alt="" />
+  <a class="prev">&#10094;</a>
+  <a class="next">&#10095;</a>
+</div>
+
   </main>
 
   <footer>
