--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -59,10 +59,10 @@
     <p class="portfolio-text">Ниже представлены реальные объекты, которые мы сделали — от простых до сложных решений.</p>
     
     <div class="gallery">
-      <img src="photos/1.jpg" alt="Работа 1" />
-      <img src="photos/2.jpg" alt="Работа 2" />
-      <img src="photos/3.jpg" alt="Работа 3" />
-      <img src="photos/4.jpg" alt="Работа 4" />
+      <img src="Photos/1.jpg" alt="Работа 1" />
+      <img src="Photos/2.jpg" alt="Работа 2" />
+      <img src="Photos/3.jpg" alt="Работа 3" />
+      <img src="Photos/4.jpg" alt="Работа 4" />
     </div>
   </main>
 
