--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -71,5 +71,65 @@
       <p>&copy; 2025 Brika — стильные натяжные потолки. Все права защищены.</p>
     </div>
   </footer>
+  <script>
+  const galleryItems = document.querySelectorAll('.gallery-item');
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.querySelector('.lightbox-img');
+  const closeBtn = document.querySelector('.close');
+  const prevBtn = document.querySelector('.prev');
+  const nextBtn = document.querySelector('.next');
+
+  let currentIndex = 0;
+
+  function openLightbox(index) {
+    currentIndex = index;
+    lightbox.style.display = 'flex';
+    lightboxImg.src = galleryItems[currentIndex].src;
+    lightboxImg.alt = galleryItems[currentIndex].alt;
+  }
+
+  function closeLightbox() {
+    lightbox.style.display = 'none';
+  }
+
+  function showPrev() {
+    currentIndex = (currentIndex - 1 + galleryItems.length) % galleryItems.length;
+    lightboxImg.src = galleryItems[currentIndex].src;
+    lightboxImg.alt = galleryItems[currentIndex].alt;
+  }
+
+  function showNext() {
+    currentIndex = (currentIndex + 1) % galleryItems.length;
+    lightboxImg.src = galleryItems[currentIndex].src;
+    lightboxImg.alt = galleryItems[currentIndex].alt;
+  }
+
+  galleryItems.forEach((item, index) => {
+    item.addEventListener('click', () => openLightbox(index));
+  });
+
+  closeBtn.addEventListener('click', closeLightbox);
+  prevBtn.addEventListener('click', showPrev);
+  nextBtn.addEventListener('click', showNext);
+
+  // Закрыть по клику вне картинки
+  lightbox.addEventListener('click', e => {
+    if (e.target === lightbox) closeLightbox();
+  });
+
+  // Можно добавить закрытие по ESC
+  document.addEventListener('keydown', e => {
+    if (e.key === 'Escape' && lightbox.style.display === 'flex') {
+      closeLightbox();
+    }
+    if (e.key === 'ArrowLeft' && lightbox.style.display === 'flex') {
+      showPrev();
+    }
+    if (e.key === 'ArrowRight' && lightbox.style.display === 'flex') {
+      showNext();
+    }
+  });
+</script>
+
 </body>
 </html>
