--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -130,6 +130,19 @@
     }
   });
 </script>
+<div class="gallery">
+  <img src="Photos/1.jpg" alt="Работа 1" class="gallery-item" />
+  <img src="Photos/2.jpg" alt="Работа 2" class="gallery-item" />
+  <img src="Photos/3.jpg" alt="Работа 3" class="gallery-item" />
+  <!-- остальные фото -->
+</div>
+
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-img" src="" alt="" />
+  <a class="prev">&#10094;</a>
+  <a class="next">&#10095;</a>
+</div>
 
 </body>
 </html>
