--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -59,11 +59,20 @@
     <p class="portfolio-text">Ниже представлены реальные объекты, которые мы сделали — от простых до сложных решений.</p>
     
     <div class="gallery">
-      <img src="Photos/1.jpg" alt="Работа 1" />
-      <img src="Photos/2.jpg" alt="Работа 2" />
-      <img src="Photos/3.jpg" alt="Работа 3" />
-      <img src="Photos/4.jpg" alt="Работа 4" />
-    </div>
+  <img src="Photos/1.jpg" alt="Работа 1" class="gallery-item" />
+  <img src="Photos/2.jpg" alt="Работа 2" class="gallery-item" />
+  <img src="Photos/3.jpg" alt="Работа 3" class="gallery-item" />
+  <img src="Photos/4.jpg" alt="Работа 3" class="gallery-item" />
+  <!-- Добавь остальные фото так же -->
+</div>
+
+<!-- Лайтбокс для просмотра -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-img" src="" alt="" />
+  <a class="prev">&#10094;</a>
+  <a class="next">&#10095;</a>
+</div>
   </main>
 
   <footer>
