--- a/Shop/products.html
+++ b/Shop/products.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="../index.html">Главная</a></li>
           <li><a href="../portfolio/portfolio.html">Портфолио</a></li>
-          <li><a href="products.html" class="active">Магазин</a></li>
+          <li><a href="../products.html" class="active">Магазин</a></li>
           <li><a href="../about.html">Контакты</a></li>
         </ul>
       </nav>
