--- a/shop/products.html
+++ b/shop/products.html
@@ -24,9 +24,9 @@
     <h2>Наши товары</h2>
     <div class="products-grid">
       <div class="product-card">
-        <img src="img/track-light.jpg" alt="Трековый светильник">
-        <h3>Трековый светильник</h3>
-        <p>Цена: 1 200 ₽</p>
+        <img src="feron1.jpg" alt="Накладной светильник">
+        <h3>Накладной светильник</h3>
+        <p>Цена: 590 ₽</p>
         <a href="#" class="btn">Купить</a>
       </div>
 
