--- a/shop/products.html
+++ b/shop/products.html
@@ -24,7 +24,7 @@
     <h2>Наши товары</h2>
     <div class="products-grid">
       <div class="product-card">
-        <img src="feron1.jpg" alt="Накладной светильник">
+        <img src="img/feron1.jpg" alt="Накладной светильник">
         <h3>Накладной светильник</h3>
         <p>Цена: 590 ₽</p>
         <a href="#" class="btn">Купить</a>
