--- a/shop/products.html
+++ b/shop/products.html
@@ -31,9 +31,9 @@
       </div>
 
       <div class="product-card">
-        <img src="img/slim-panel.jpg" alt="Слим-панель">
-        <h3>Слим-панель</h3>
-        <p>Цена: 890 ₽</p>
+        <img src="img/gx53white.jpg" alt="Встраиваемый gx53 ">
+        <h3>Встраиваемый gx53</h3>
+        <p>Цена: 80 ₽</p>
         <a href="#" class="btn">Купить</a>
       </div>
 
