--- a/shop/products.html
+++ b/shop/products.html
@@ -38,9 +38,9 @@
       </div>
 
       <div class="product-card">
-        <img src="../lampa4k10w.jpg" alt="Лампа Gx53">
+        <img src="img/lampa4k10w.jpg" alt="Лампа Gx53">
         <h3>Лампа Gx53</h3>
-        <p>Цена: 120 ₽/м</p>
+        <p>Цена: 120 ₽</p>
         <a href="#" class="btn">Купить</a>
       </div>
     </div>
