--- a/shop/products.html
+++ b/shop/products.html
@@ -20,6 +20,28 @@
     </div>
   </header>
 
+  <aside class="sidebar">
+    <h3>Категории</h3>
+    <ul class="menu">
+      <li>
+        <span>Свет</span>
+        <ul>
+          <li><a href="#">Встраиваемые</a></li>
+          <li><a href="#">Накладные</a></li>
+          <li><a href="#">Трековые</a></li>
+        </ul>
+      </li>
+      <li>
+        <span>Люстры</span>
+        <ul>
+          <li><a href="#">Подвесные</a></li>
+          <li><a href="#">Потолочные</a></li>
+        </ul>
+      </li>
+    </ul>
+  </aside>
+
+
   <main class="container">
     <h2>Наши товары</h2>
     <div class="products-grid">
