--- a/shop/products.html
+++ b/shop/products.html
@@ -41,8 +41,7 @@
     </ul>
   </aside>
 
-
-  <main class="container">
+ <div class="content">
     <h2>Наши товары</h2>
     <div class="products-grid">
       <div class="product-card">
