--- a/shop/products.html
+++ b/shop/products.html
@@ -20,52 +20,54 @@
     </div>
   </header>
 
-  <aside class="sidebar">
-    <h3>Категории</h3>
-    <ul class="menu">
-      <li>
-        <span>Свет</span>
-        <ul>
-          <li><a href="#">Встраиваемые</a></li>
-          <li><a href="#">Накладные</a></li>
-          <li><a href="#">Трековые</a></li>
-        </ul>
-      </li>
-      <li>
-        <span>Люстры</span>
-        <ul>
-          <li><a href="#">Подвесные</a></li>
-          <li><a href="#">Потолочные</a></li>
-        </ul>
-      </li>
-    </ul>
-  </aside>
+  <div class="container-main">
+    <aside class="sidebar">
+      <h3>Категории</h3>
+      <ul class="menu">
+        <li>
+          <span>Свет</span>
+          <ul>
+            <li><a href="#">Встраиваемые</a></li>
+            <li><a href="#">Накладные</a></li>
+            <li><a href="#">Трековые</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Люстры</span>
+          <ul>
+            <li><a href="#">Подвесные</a></li>
+            <li><a href="#">Потолочные</a></li>
+          </ul>
+        </li>
+      </ul>
+    </aside>
 
- <div class="content">
-    <h2>Наши товары</h2>
-    <div class="products-grid">
-      <div class="product-card">
-        <img src="img/feron1.jpg" alt="Накладной светильник">
-        <h3>Накладной светильник</h3>
-        <p>Цена: 590 ₽</p>
-        <a href="#" class="btn">Купить</a>
-      </div>
+    <main class="content">
+      <h2>Наши товары</h2>
+      <div class="products-grid">
+        <div class="product-card">
+          <img src="img/feron1.jpg" alt="Накладной светильник" />
+          <h3>Накладной светильник</h3>
+          <p>Цена: 590 ₽</p>
+          <a href="#" class="btn">Купить</a>
+        </div>
 
-      <div class="product-card">
-        <img src="img/gx53white.jpg" alt="Встраиваемый gx53 ">
-        <h3>Встраиваемый gx53</h3>
-        <p>Цена: 80 ₽</p>
-        <a href="#" class="btn">Купить</a>
-      </div>
+        <div class="product-card">
+          <img src="img/gx53white.jpg" alt="Встраиваемый gx53" />
+          <h3>Встраиваемый gx53</h3>
+          <p>Цена: 80 ₽</p>
+          <a href="#" class="btn">Купить</a>
+        </div>
 
-      <div class="product-card">
-        <img src="img/lampa4k10w.jpg" alt="Лампа Gx53">
-        <h3>Лампа Gx53</h3>
-        <p>Цена: 120 ₽</p>
-        <a href="#" class="btn">Купить</a>
+        <div class="product-card">
+          <img src="img/lampa4k10w.jpg" alt="Лампа Gx53" />
+          <h3>Лампа Gx53</h3>
+          <p>Цена: 120 ₽</p>
+          <a href="#" class="btn">Купить</a>
+        </div>
       </div>
-    </div>
-  </main>
+    </main>
+  </div>
 
   <footer>
     <div class="container">
