--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="#" class="active">Главная</a></li>
           <li><a href="portfolio/portfolio.html">Портфолио</a></li>
-          <li><a href="Shop/products.html">Магазин</a></li>
+          <li><a href="shop/products.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
