--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <ul>
 <li><a class="active" href="#">Главная</a></li>
 <li><a href="portfolio/portfolio.html">Портфолио</a></li>
-<li><a href="#">Контакты</a></li>
+<li><a href="contacts.html">Контакты</a></li>
 </ul>
 </nav>
 </div>
