--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -48,7 +48,7 @@
           <li><a href="../index.html">Главная</a></li>
           <li><a href="portfolio.html" class="active">Портфолио</a></li>
       
-          <li><a href="../about.html">Контакты</a></li>
+          <li><a href="../contacts.html">Контакты</a></li>
         </ul>
       </nav>
     </div>
