--- a/shop/products.html
+++ b/shop/products.html
@@ -14,7 +14,7 @@
           <li><a href="../index.html">Главная</a></li>
           <li><a href="../portfolio/portfolio.html">Портфолио</a></li>
           <li><a href="../products.html" class="active">Магазин</a></li>
-          <li><a href="../about.html">Контакты</a></li>
+          <li><a href="../contacts.html">Контакты</a></li>
         </ul>
       </nav>
     </div>
