--- a/contacts.html
+++ b/contacts.html
@@ -7,24 +7,38 @@
   <link rel="stylesheet" href="css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <style>
+    body {
+      background: #111;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
     .contacts {
       max-width: 700px;
       margin: 60px auto;
-      background: rgba(255,255,255,0.9);
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
       text-align: center;
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
     }
     .contacts h1 {
       margin-bottom: 20px;
-      color: #007acc;
-      font-size: 2.5rem;
+      font-size: 3.2rem;
+      color: #fff;
+      font-weight: 700;
+      text-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
     }
     .contacts p {
       margin-bottom: 15px;
       font-size: 1.2rem;
-      color: #333;
+      color: #ddd;
+    }
+    .contacts a {
+      color: #00b0ff;
+    }
+    .contacts a:hover {
+      text-decoration: underline;
     }
     .social-links {
       list-style: none;
@@ -36,15 +50,16 @@
     }
     .social-links li a {
       text-decoration: none;
-      background: #007acc;
+      background: #222;
       color: #fff;
       padding: 10px 20px;
       border-radius: 8px;
-      box-shadow: 0 3px 10px rgba(0,122,204,0.4);
-      transition: background 0.3s ease;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.6);
+      transition: background 0.3s ease, box-shadow 0.3s ease;
     }
     .social-links li a:hover {
-      background: #005f99;
+      background: #333;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.8);
     }
   </style>
 </head>
