--- a/contacts.html
+++ b/contacts.html
@@ -79,14 +79,14 @@
   <main>
     <div class="contacts">
       <h1>Контакты</h1>
-      <p>Телефон: <a href="tel:+79001234567">+7 (900) 123‑45‑67</a></p>
+      <p>Телефон: <a href="tel:+79539732363">+7 (953) 973‑23‑63</a></p>
       <p>Мы в социальных сетях:</p>
       <ul class="social-links">
-        <li><a href="https://t.me/example" target="_blank" rel="noopener">Telegram</a></li>
-        <li><a href="https://instagram.com/example" target="_blank" rel="noopener">Instagram</a></li>
-        <li><a href="https://wa.me/79001234567" target="_blank" rel="noopener">WhatsApp</a></li>
-        <li><a href="https://vk.com/example" target="_blank" rel="noopener">ВКонтакте</a></li>
-        <li><a href="https://youtube.com/example" target="_blank" rel="noopener">YouTube</a></li>
+        <li><a href="https://t.me/Briqua" target="_blank" rel="noopener">Telegram</a></li>
+        <li><a href="https://instagram.com/brika.ru" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://wa.me/79539732363" target="_blank" rel="noopener">WhatsApp</a></li>
+        <li><a href="https://vk.com/potolki.brika71" target="_blank" rel="noopener">ВКонтакте</a></li>
+        <li><a href="https://youtube.com/@БрикаЕвгенийНатяжныепотолки" target="_blank" rel="noopener">YouTube</a></li>
       </ul>
     </div>
   </main>
